# StateVar

./: .gitignore  .travis.yml  CHANGELOG.md  Data-StateVar.html  LICENSE  README.md  StateVar.cabal  StateVar.haddock  doc-index.html  index-frames.html  index.html
.github/workflows/: haskell-ci.yml  haskell.yml
src/: Data-StateVar.html
src/Data/: StateVar.hs
