cabal-version: 3.4
name: StateVar
version: 1.2.2
license: BSD-3-Clause
license-file: LICENSE
copyright:
    Copyright (C) 2014-2015 Edward A. Kmett, 2009-2021 Sven Panne
category: Data
author: Sven Panne and Edward Kmett
maintainer: Sven Panne <svenpanne@gmail.com>
homepage: https://github.com/haskell-opengl/StateVar
bug-reports: https://github.com/haskell-opengl/StateVar/issues
synopsis: State variables
description:
    This package contains state variables, which are references in the IO monad,
    like IORefs or parts of the OpenGL state.
build-type: Simple
tested-with:
    GHC == 7.0.4
    GHC == 7.10.3
    GHC == 7.2.2
    GHC == 7.4.2
    GHC == 7.6.3
    GHC == 7.8.4
    GHC == 8.0.2
    GHC == 8.10.7
    GHC == 8.2.2
    GHC == 8.4.4
    GHC == 8.6.5
    GHC == 8.8.4
    GHC == 9.0.2
    GHC == 9.2.8
    GHC == 9.4.8
    GHC == 9.6.4
    GHC == 9.8.1
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/haskell-opengl/StateVar.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        , base         >=4 && <5
        , stm          >=2.3.0.1 && <2.6
        , transformers >=0.3 && <0.7
    exposed-modules: Data.StateVar
    default-extensions: TypeOperators
    ghc-options: -Wall
    other-extensions:
        CPP
        DeriveDataTypeable
        MultiParamTypeClasses
        FunctionalDependencies
        FlexibleInstances
        TypeFamilies

    if impl ( ghc > 8 )
        ghc-options: -Wcompat

    if impl ( ghc >= 7.4 )
        -- other-extensions: DefaultSignatures
        cpp-options: -DUSE_DEFAULT_SIGNATURES=1

    if impl ( ghc >= 9.0 )
        -- these flags may abort compilation with GHC-8.10
        -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
        ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
